--- a/index.html
+++ b/index.html
@@ -727,9 +727,509 @@
           </p>
         </section>
       </div>
-      <section class="main-section" id="sjlx">
+      <div class="main-section" id="sjlx">
         <header>04-数据类型</header>
-      </section>
+        <section id="ShuJuLeiXingJianJie">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#ShuJuLeiXingJianJie"
+                ><span class="color-red">数据类型简介</span></a
+              >
+            </li>
+            <li>
+              <a href="#jianDanShuJu"><span>简单数据类型</span></a>
+            </li>
+            <li>
+              <a href="#huoQuBianLiang"><span>获取变量数据类型</span></a>
+            </li>
+            <li>
+              <a href="#ShuJuZhuanHuan"><span>数据类型转换</span></a>
+            </li>
+          </ul>
+          <h1>1. 数据类型简介</h1>
+          <h2>1.1 为什么需要数据类型</h2>
+          <p>
+            在计算机中，不同的数据所需占用的存储空间是不同的，为了便于把数据分成所需内存大小不同的数据，充分利用存储空间，于是定义了不同的数据类型。
+          </p>
+          <p>
+            简单来说，数据类型就是数据的类别型号。比如姓名“张三”，年龄18，这些数据的类型是不一样的
+          </p>
+          <h2>1.2 变量的数据类型</h2>
+          <p>
+            变量是用来存储值的所在处，它们有名字和数据类型。变量的数据类型决定了如何将代表这些值的位存储到计算机的内存中。<span
+              class="color-red bold"
+              >JavaScript 是一种弱类型或者说动态语言。</span
+            >
+            这意味着不用提前声明变量的类型，在程序运行过程中，类型会被自动确定。
+          </p>
+          <code>
+            var age = 10; // 这是一个数字型<br />
+            var areYouOk = '是的'; //这是一个字符串
+          </code>
+          <p>
+            在代码运行时，变量的数据类型是由 JS引擎
+            <span class="color-red"> 根据 = 右边变量值的数据类型来判断</span>
+            的，运行完毕之后， 变量就确定了数据类型。<span class="color-red"
+              >JavaScript
+              拥有动态类型，同时也意味着相同的变量可用作不同的类型：</span
+            >
+          </p>
+          <code
+            >var x = 6; // x 为数字<br />var x = "Bill"; // x 为字符串
+          </code>
+          <h2>1.3 数据类型的分类</h2>
+          <p>JS 把数据类型分为两类：</p>
+          <ul>
+            <li>简单数据类型 （Number,String,Boolean,Undefined,Null）</li>
+            <li>复杂数据类型 （object）</li>
+          </ul>
+        </section>
+        <hr />
+        <section id="jianDanShuJu">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#ShuJuLeiXingJianJie"><span>数据类型简介</span></a>
+            </li>
+            <li>
+              <a href="#jianDanShuJu"
+                ><span class="color-red">简单数据类型</span></a
+              >
+            </li>
+            <li>
+              <a href="#huoQuBianLiang"><span>获取变量数据类型</span></a>
+            </li>
+            <li>
+              <a href="#ShuJuZhuanHuan"><span>数据类型转换</span></a>
+            </li>
+          </ul>
+          <h1>2. 简单数据类型</h1>
+          <h2>2.1 简单数据类型（基本数据类型）</h2>
+          <p>JavaScript 中的简单数据类型及其说明如下：</p>
+          <img src="./images/04-数据类型/简单数据类型.png" alt="" />
+          <h2>2.2 数字型<span class="color-red"> Number</span></h2>
+          <p>
+            JavaScript 数字类型既可以用来保存整数值，也可以保存小数(浮点数）。
+          </p>
+          <code> var age = 21; // 整数<br />var Age = 21.3747; // 小数 </code>
+          <h3>2.2.1 数字型进制</h3>
+          <p>最常见的进制有二进制、八进制、十进制、十六进制。</p>
+          <code>
+            // 1.八进制数字序列范围：0~7<br />
+            var num1 = 07; // 对应十进制的7<br />
+            var num2 = 019; // 对应十进制的19<br />
+            var num3 = 08;//对应十进制的8<br />
+            // 2.十六进制数字序列范围：0~9以及A~F<br />
+            var num = 0xA;
+          </code>
+          <p>
+            现阶段我们只需要记住，<span class="color-red"
+              >在JS中八进制前面加0，十六进制前面加 0x
+            </span>
+          </p>
+          <h3>2.2.2 数字型范围</h3>
+          <p>JavaScript中数值的最大和最小值</p>
+          <code
+            >alert(Number.MAX_VALUE);// 1.7976931348623157e+308
+            alert(Number.MIN_VALUE); // 5e-324</code
+          >
+          <ul>
+            <li>
+              最大值：Number.MAX_VALUE，这个值为： 1.7976931348623157e+308
+            </li>
+            <li>最小值：Number.MIN_VALUE，这个值为：5e-32</li>
+          </ul>
+          <h3>2.2.3 数值型三个特殊值</h3>
+          <code>
+            alert(Infinity); // Infinity<br />
+            alert(-Infinity); // -Infinity<br />
+            alert(NaN); // NaN
+          </code>
+          <ul>
+            <li>Infinity ，代表无穷大，大于任何数值</li>
+            <li>-Infinity ，代表无穷小，小于任何数值</li>
+            <li>NaN ，Not a number，代表一个非数值</li>
+          </ul>
+          <h3>2.2.4 isNaN()</h3>
+          <p>用来判断一个变量是否为非数字的类型，返回 true 或者 false</p>
+          <img src="./images/04-数据类型/isNoN.png" alt="" />
+          <code>
+            var usrAge = 21;<br />
+            var isOk = isNaN(userAge);<br />
+            console.log(isNum); // false ，21 不是一个非数字<br />
+            var usrName = "andy";<br />
+            console.log(isNaN(userName)); // true ，"andy"是一个非数字
+          </code>
+          <img src="./images/04-数据类型/13-isNoN.png" alt="" />
+          <img src="./images/04-数据类型/12-数字型Number.png" alt="" />
+          <h2>2.3 字符串型 <span class="color-red">String</span></h2>
+          <p>
+            字符串型可以是引号中的任意文本，其语法为
+            <span class="color-red">双引号""</span> 和<span class="color-red"
+              >单引号''</span
+            >
+          </p>
+          <code>
+            var strMsg = "我爱北京天安门~"; // 使用双引号表示字符串<br />
+            var strMsg2 = '我爱吃猪蹄~'; // 使用单引号表示字符串<br />
+            // 常见错误<br />
+            var strMsg3 = 我爱大肘子; //<br />
+            报错，没使用引号，会被认为是js代码，但js没有这些语法
+          </code>
+          <p>
+            因为 HTML 标签里面的属性使用的是双引号，JS 这里我们更<span
+              class="color-red"
+              >推荐使用单引号。</span
+            >
+          </p>
+          <h3>2.3.1 字符串引号嵌套</h3>
+          <p>
+            JS 可以用<span class="color-red">单引号嵌套双引号</span
+            >，或者用<span class="color-red"
+              >双引号嵌套单引号 (外双内单，外单内双)</span
+            >
+          </p>
+          <code>
+            var strMsg = '我是"高帅富"程序猿'; // 可以用''包含""<br />
+            var strMsg2 = "我是'高帅富'程序猿"; // 也可以用"" 包含''<br />
+            // 常见错误<br />
+            var badQuotes = 'What on earth?"; // 报错，不能 单双引号搭
+          </code>
+          <img src="./images/04-数据类型/14-字符串型String.png" alt="" />
+          <h3>2.3.2 字符串转义符</h3>
+          <p>
+            类似HTML里面的特殊字符，字符串中也有特殊字符，我们称之为转义符。
+          </p>
+          <p>转义符都是 \ 开头的，常用的转义符及其说明如下：</p>
+          <table>
+            <tr>
+              <th>转义符</th>
+              <th>解释说明</th>
+            </tr>
+            <tr>
+              <td>\n</td>
+              <td>换行符，n 是 newline 的意思</td>
+            </tr>
+            <tr>
+              <td>\ \</td>
+              <td>斜杠 \</td>
+            </tr>
+            <tr>
+              <td>\'</td>
+              <td>' 单引号</td>
+            </tr>
+            <tr>
+              <td>\"</td>
+              <td>”双引号</td>
+            </tr>
+            <tr>
+              <td>\t</td>
+              <td>tab 缩进</td>
+            </tr>
+            <tr>
+              <td>\b</td>
+              <td>空格 ，b 是 blank 的</td>
+            </tr>
+          </table>
+          <p>案例：弹出网页警示框</p>
+          <img src="./images/04-数据类型/警示案例.png" alt="" />
+          <p>
+            酷热难耐，火辣的太阳底下，我挺拔的身姿，成为了最为独特的风景。我审视四周，这里，是我的舞台，我就
+            是天地间的王者。这一刻，我豪气冲天，终于大喊一声："收破烂啦～"
+          </p>
+          <img src="./images/04-数据类型/15-弹出警示案例.png" alt="" />
+          <h3>2.2.3 字符串长度</h3>
+          <p>
+            字符串是由若干字符组成的，这些字符的数量就是字符串的长度。通过字符串的
+            length 属性可以获取整个字符串的长度
+          </p>
+          <code>
+            var strMsg = "我是帅气多金的程序猿！";<br />
+            alert(strMsg.length); // 显示 11
+          </code>
+          <h3>2.3.4 字符串拼接</h3>
+          <ul>
+            <li>
+              多个字符串之间可以使用 + 进行拼接，其拼接方式为<span
+                class="color-red"
+                >字符串 + 任何类型 = 拼接之后的新字符串</span
+              >
+            </li>
+            <li>
+              拼接前会把与字符串相加的任何类型转成字符串，再拼接成一个新的字符串
+            </li>
+          </ul>
+          <code>
+            //1.1 字符串 "相加"<br />
+            alert('hello' + ' ' + 'world'); // hello world<br />
+            //1.2 数值字符串 "相加"<br />
+            alert('100' + '100'); // 100100<br />
+            //1.3 数值字符串 + 数值<br />
+            alert('11' + 12); // 1112
+          </code>
+          <p class="color-red bold">+ 号总结口诀：数值相加 ，字符相连</p>
+          <img src="./images/04-数据类型/16-字符串拼接.png" alt="" />
+          <h3>2.3.5 字符串拼接加强</h3>
+          <code>
+            console.log('pink老师' + 18); // 只要有字符就会相连<br />
+            var age = 18;<br />
+            // console.log('pink老师age岁啦'); // 这样不行哦<br />
+            console.log('pink老师' + age); // pink老师18<br />
+            console.log('pink老师' + age + '岁啦'); // pink老师18岁啦
+          </code>
+          <ul>
+            <li>
+              我们经常会将字符串和变量来拼接，因为变量可以很方便地修改里面的值
+            </li>
+            <li>变量是不能添加引号的，因为加引号的变量会变成字符串</li>
+            <li>
+              如果变量两侧都有字符串拼接，口诀“<span class="color-red bold"
+                >引引加加</span
+              >”，删掉数字，变量写加中间
+            </li>
+          </ul>
+          <img src="./images/04-数据类型/17-字符串拼接加强.png" alt="" />
+          <p>案例：显示年龄</p>
+          <p>
+            弹出一个输入框，需要用户输入年龄，之后弹出一个警示框显示“您今年 xx
+            岁啦”（xx 表示刚才输
+          </p>
+          <img src="./images/04-数据类型/显示年龄.png" alt="" />
+          <p>案例分析</p>
+          <p>这是利用 JS 编写的一个非常简单的交互效果程</p>
+          <p>交互编程的三个基本要素：</p>
+          <p>
+            1. 你喜欢我吗？→ 这是<span class="color-red">用户输入</span><br />
+            2. 女孩想了想 → 这是 <span class="color-red">程序内部处理</span
+            ><br />
+            3. 女孩回答：“我也喜欢你。” → 这是<span class="color-red"
+              >输出结果</span
+            >
+          </p>
+          <p>那么在程序中要如何实现呢？</p>
+          <p>
+            ① 弹出一个输入框（prompt)，让用户输入年龄（<span class="color-red"
+              >用户输入</span
+            >）<br />
+            ②把用户输入的值用变量保存起来,把刚才输入的年龄与所要输出的字符串拼接
+            （<span class="color-red">程序内部处理</span>）<br />
+            ③ 使用alert语句弹出警示框（<span class="color-red">输出结果</span>）
+          </p>
+          <p>案例代码</p>
+          <code>
+            // 弹出一个输入框（prompt)，让用户输入年龄（用户输入）<br />//把用户输入的值用变量保存起来,把刚才输入的年龄与所要输出的字符串拼接（程序内部处理）
+            // 使用alert语句弹出警示框（输出结果）<br />
+            var age = prompt('请输入您的年龄');<br />
+            var str = '您今年已经' + age + '岁了';<br />
+            alert(str);
+          </code>
+          <img src="./images/04-数据类型/18-显示年龄案例.png" alt="" />
+          <h2>2.4 布尔型 Boolean</h2>
+          <p>
+            布尔类型有两个值：true 和 false ，其中 true 表示真（对），而 fals
+          </p>
+          <p>布尔型和数字型相加的时候， true 的值为 1 ，false 的值为 0。</p>
+          <code>
+            console.log(true + 1); // 2<br />
+            console.log(false + 1); // 1
+          </code>
+          <h2>2.5 Undefined 和 Null</h2>
+          <p>
+            一个声明后没有被赋值的变量会有一个默认值 undefined (
+            如果进行相连或者相加时，注意结果）
+          </p>
+          <code>
+            var variable;<br />
+            console.log(variable); // undefined<br />
+            console.log('你好' + variable); // 你好undefined<br />
+            console.log(11 + variable); // NaN<br />
+            console.log(true + variable); // NaN
+          </code>
+          <p>
+            一个声明变量给 null
+            值，里面存的值为空（学习对象时，我们继续研究null)
+          </p>
+          <code>
+            var vari = null;<br />
+            console.log('你好' + vari); // 你好null<br />
+            console.log(11 + vari); // 11<br />
+            console.log(true + vari); // 1
+          </code>
+          <img
+            src="./images/04-数据类型/19-布尔型Boolean和undefined，Null.png"
+            alt=""
+          />
+        </section>
+        <hr />
+        <section id="huoQuBianLiang">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#ShuJuLeiXingJianJie"><span>数据类型简介</span></a>
+            </li>
+            <li>
+              <a href="#jianDanShuJu"><span>简单数据类型</span></a>
+            </li>
+            <li>
+              <a href="#huoQuBianLiang"
+                ><span class="color-red">获取变量数据类型</span></a
+              >
+            </li>
+            <li>
+              <a href="#ShuJuZhuanHuan"><span>数据类型转换</span></a>
+            </li>
+          </ul>
+          <h1>3. 获取变量数据类型</h1>
+          <h2>3.1 获取检测变量的数据类型</h2>
+          <p>typeof 可用来获取检测变量的数据类型</p>
+          <code>
+            var num = 18;<br />
+            console.log(typeof num) // 结果 number
+          </code>
+          <p>不同类型的返回值</p>
+          <img src="./images/04-数据类型/不同类型返回值.png" alt="" />
+          <h2>3.2 字面量</h2>
+          <p>
+            字面量是在源代码中一个固定值的表示法，通俗来说，就是字面量表示如何表达这个值。
+          </p>
+          <ul>
+            <li>数字字面量：8, 9, 10</li>
+            <li>字符串字面量：'黑马程序员', "大前端"</li>
+            <li>布尔字面量：true，false</li>
+          </ul>
+        </section>
+        <hr />
+        <section id="ShuJuZhuanHuan">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#ShuJuLeiXingJianJie"><span>数据类型简介</span></a>
+            </li>
+            <li>
+              <a href="#jianDanShuJu"><span>简单数据类型</span></a>
+            </li>
+            <li>
+              <a href="#huoQuBianLiang"><span>获取变量数据类型</span></a>
+            </li>
+            <li>
+              <a href="#ShuJuZhuanHuan"
+                ><span class="color-red">数据类型转换</span></a
+              >
+            </li>
+          </ul>
+          <h1>4. 数据类型转换</h1>
+          <h2>4.1 什么是数据类型转换</h2>
+          <p>
+            使用表单、prompt
+            获取过来的数据默认是字符串类型的，此时就不能直接简单的进行加法运算，而需要转换变
+            量的数据类型。通俗来说，就是<span class="color-red"
+              >把一种数据类型的变量转换成另外一种数据类型</span
+            >
+          </p>
+          <p>我们通常会实现3种方式的转换：</p>
+          <ul>
+            <li>转换为字符串类型</li>
+            <li>转换为数字型</li>
+            <li>转换为布尔型</li>
+          </ul>
+          <h2>4.2 转换为字符串</h2>
+          <img src="./images/04-数据类型/转换为字符串.png" alt="" />
+          <img src="./images/04-数据类型/toString().png" alt="" />
+          <ul>
+            <li>toString() 和 String() 使用方式不一样</li>
+            <li>
+              三种转换方式，我们更喜欢用第三种加号拼接字符串转换方式，
+              这一种方式也称之为隐式转换
+            </li>
+          </ul>
+          <h2>4.3 转换为数字型（重点）</h2>
+          <img src="./images/04-数据类型/转换成数字型.png" alt="" />
+          <img src="./images/04-数据类型/转换为数字型（重点）.png" alt="" />
+          <ul>
+            <li>
+              注意 parseInt 和 parseFloat
+              <span class="color-red">单词的大小写</span>，这2个是重点
+            </li>
+            <li>隐式转换是我们在进行算数运算的时候，JS 自动转换了数据类型</li>
+          </ul>
+          <p class="color-red bold">案例 1：计算年龄</p>
+          <p>
+            此案例要求在页面中弹出一个输入框，我们输入出生年份后，
+            能计算出我们的年龄
+          </p>
+          <img src="./images/04-数据类型/出生日期.png" alt="" />
+          <p class="color-red bold">案例分析</p>
+          <p>
+            ① 弹出一个输入框（prompt)，让用户输入出生年份 （<span
+              class="color-red"
+              >用户输入</span
+            >）<br />
+            ②把用户输入的值用变量保存起来，然后用今年的年份减去变量值，结果就是现在的年龄
+            （<span class="color-red">程序内部处理</span>）<br />
+            ③ 弹出警示框（alert) ， 把计算的结果输出 （<span class="color-red"
+              >输出结果</span
+            >）
+          </p>
+          <p class="color-red bold">案例代码</p>
+          <code>
+            // 1. 弹出输入框，输入出生年份，并存储在变量中<br />
+            var year = prompt('请输入您的出生年份：'); // <b>用户输入</b> <br />
+            // 2. 用今年减去刚才输入的年份<br />
+            var result = 2019 - year; // <b>程序内部处理</b><br />
+            // 3. 弹出提示框<br />
+            alert('您的年龄是:' + result + '岁'); // <b>输出结果</b>
+          </code>
+          <img src="./images/04-数据类型/计算年龄.png" alt="" />
+          <p class="color-red bold">案例 2：简单加法</p>
+          <p>
+            计算两个数的值，
+            用户输入第一个值后，继续弹出第二个输入框并输入第二个值，最后通过弹出窗口显示出两次输入值相加的结果。
+          </p>
+          <img src="./images/04-数据类型/简单加法器.png" alt="" />
+          <p class="color-red bold">案例分析</p>
+          <p>
+            ① 先弹出第一个输入框，提示用户输入第一个值 保存起来<br />
+            ② 再弹出第二个框，提示用户输入第二个值 保存起来<br />
+            ③ 把这两个值相加，并将结果赋给新的变量（注意数据类型转换）<br />
+            ④ 弹出警示框（alert) ， 把计算的结果输出 （<span class="color-red"
+              >输出结果</span
+            >
+            ）
+          </p>
+          <p class="color-red bold">案例代码</p>
+          <code>
+            // 1. 先弹出第一个输入框，提示用户输入第一个值<br />
+            var num1 = prompt('请输入第一个值：');<br />
+            // 2. 再弹出第二个框，提示用户输入第二个值<br />
+            var num2 = prompt('请输入第二个值：');<br />
+            // 3. 将输入的值转换为数字型后，把这两个值相加，并将结果赋给新的变量
+            var result = parseFloat(num1) + parseFloat(num2);<br />
+            // 4. 弹出结果 alert('结果是:' + result);
+          </code>
+          <img src="./images/04-数据类型/2简单加法器.png" alt="" />
+          <h2>4.4 转换为布尔型</h2>
+          <img src="./images/04-数据类型/布尔型.png" alt="" />
+          <ul>
+            <li>
+              代表<span class="color-red">空、否定的值</span>会被转换为 false
+              ，如 ''、0、NaN、null、undefine
+            </li>
+            <li>其余值都会被转换为 true</li>
+          </ul>
+          <code>
+            console.log(Boolean('')); // false<br />
+            console.log(Boolean(0)); // false<br />
+            console.log(Boolean(NaN)); // false<br />
+            console.log(Boolean(null)); // false<br />
+            console.log(Boolean(undefined)); // false<br />
+            console.log(Boolean('小白')); // true<br />
+            console.log(Boolean(12)); // true
+          </code>
+          <img src="./images/04-数据类型/转换为布尔型.png" alt="" />
+        </section>
+        <hr />
+      </div>
       <section class="main-section" id="kzydyjzy">
         <header>05-扩展阅读以及作业</header>
       </section>
